// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`long.js 1`] = `
====================================options=====================================
parsers: ["flow", "babylon"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import(
  'myreallylongdynamicallyloadedmodulenamemyreallylongdynamicallyloadedmodulename'
);

import(
  'myreallylongdynamicallyloadedmodulenamemyreallylongdynamicallyloadedmodulename'
).then(exports => {
});

=====================================output=====================================
import("myreallylongdynamicallyloadedmodulenamemyreallylongdynamicallyloadedmodulename");

import("myreallylongdynamicallyloadedmodulenamemyreallylongdynamicallyloadedmodulename").then(
  exports => {}
);

================================================================================
`;

exports[`then.js 1`] = `
====================================options=====================================
parsers: ["flow", "babylon"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const x = import('some-module').then(x => {
  // ...
});

=====================================output=====================================
const x = import("some-module").then(x => {
  // ...
});

================================================================================
`;
